Add basic Map features :  - Rendering a map with event listener on markers;  - Update Navigation menu;  - Setup legal mentions page;  - add Leaflet library;

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -17,16 +17,31 @@
                     </ul>
                 </div>
                 <div class="logo-element">
-                    IN+
+                    PADER
                 </div>
 
             </li>
 
             <li ui-sref-active="active">
+                <a ui-sref="index.map"><i class="fa fa-map-marker"></i> <span class="nav-label">CARTE</span> </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="index.aboutgizpader" href="/index/aboutgizpader"><i class="fa fa-globe"></i> <span
+                        class="nav-label">GIZ/PADER</span></a>
+            </li>
+            <li ui-sref-active="active">
                 <a ui-sref="index.main"><i class="fa fa-laptop"></i> <span class="nav-label">Main page</span> </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="index.minor"><i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span></a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="index.aboutapp" href="/index/aboutapp"><i class="fa fa-info-circle"></i> <span class="nav-label">A
+                        Propos</span></a>
+            </li>
+            
+            <li ui-sref-active="active">
+                <a ui-sref="index.legal"><i class="fa fa-file"></i> <span class="nav-label">Mentions Legales</span></a>
             </li>
         </ul>
 
