--- a/views/common/footer.html
+++ b/views/common/footer.html
@@ -1,8 +1,8 @@
 <div class="footer">
     <div class="pull-right">
-        10GB of <strong>250GB</strong> Free.
+        Cette carte est utilisée à titre d’illustration.
     </div>
     <div>
-        <strong>Copyright</strong> Example Company &copy; 2015-2016
+        <strong>Copyright</strong> GIZ GmbH &copy; 2019-2020
     </div>
 </div>
