--- a/views/common/content.html
+++ b/views/common/content.html
@@ -14,6 +14,9 @@
         <!-- Main view  -->
         <div ui-view></div>
 
+        <!-- Toaster Directive-->
+        <toaster-container></toaster-container>
+        
         <!-- Footer -->
         <div ng-include="'views/common/footer.html'"></div>
 
