Add Demo custom directive to display Leaflet popup message

--- a/views/common/content.html
+++ b/views/common/content.html
@@ -16,12 +16,15 @@
 
         <!-- Toaster Directive-->
         <toaster-container></toaster-container>
-        
+
         <!-- Footer -->
         <div ng-include="'views/common/footer.html'"></div>
 
     </div>
     <!-- End page wrapper-->
+
+    <!-- Right Sidebar -->
+    <div ng-include="'views/common/right_sidebar.html'"></div>
 
 </div>
 <!-- End wrapper-->
