--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -29,12 +29,12 @@
                 <a ui-sref="index.aboutgizpader" href="/index/aboutgizpader"><i class="fa fa-globe"></i> <span
                         class="nav-label">GIZ/PADER</span></a>
             </li>
-            <li ui-sref-active="active">
+            <!-- <li ui-sref-active="active">
                 <a ui-sref="index.main"><i class="fa fa-laptop"></i> <span class="nav-label">Main page</span> </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="index.minor"><i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span></a>
-            </li>
+            </li> -->
             <li ui-sref-active="active">
                 <a ui-sref="index.aboutapp" href="/index/aboutapp"><i class="fa fa-info-circle"></i> <span class="nav-label">A
                         Propos</span></a>
