--- a/views/map.html
+++ b/views/map.html
@@ -1,5 +1,5 @@
 
-<div class="wrapper wrapper-content animated fadeInRight" ng-controller="MapCtrl as map">
+<div class="wrapper wrapper-content animated fadeInUp" ng-controller="MapCtrl as map">
     <div class="row">
         <div class="col-lg-12">
             <div class="text-center m-t-lg">
@@ -12,13 +12,13 @@
             </div>
         </div>
         <div class="col-lg-12">
-            <leaflet event-broadcast="events" lf-center="center" markers="markers" width="100%" height="400px"></leaflet>
-            <h1>Marker Events example</h1>
-            <ul>
+            <leaflet event-broadcast="events" lf-center="center" markers="markers" width="100%" height="550px"></leaflet>
+            <!--<h1>Marker Events example</h1>
+             <ul>
                 <li><strong ng-bind="eventDetected"></strong> event caught in listener.</li>
             </ul>
 
-            <pre>{{map.lastEvent | json}}</pre>
+            <pre>{{map.lastEvent | json}}</pre> -->
         </div>
     </div>
 </div>
