Update navifgation label : Fix typo

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -41,7 +41,7 @@
             </li>
             
             <li ui-sref-active="active">
-                <a ui-sref="index.legal"><i class="fa fa-file"></i> <span class="nav-label">Mentions Legales</span></a>
+                <a ui-sref="index.legal"><i class="fa fa-file"></i> <span class="nav-label">Mentions Légales</span></a>
             </li>
         </ul>
 
