--- a/views/map.html
+++ b/views/map.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col-lg-12">
-            <leaflet event-broadcast="events"  paths="paths" lf-center="center" markers="markers" layers="layers" geojson="geojson" width="100%" height="550px"></leaflet>
+            <leaflet event-broadcast="events"  paths="paths" lf-center="center" markers="markers" layers="layers" geojson="geojson" width="100%" height="550px" min-height="70%"></leaflet>
             <!--<h1>Marker Events example</h1>
              <ul>
                 <li><strong ng-bind="eventDetected"></strong> event caught in listener.</li>
