WIP : Setup details view

--- a/views/common/activity_details.html
+++ b/views/common/activity_details.html
@@ -1,5 +1,5 @@
 <div class="sidebar-title">
-    <h3> <i class="fa fa-cube"></i> **Title** <br>{{map.currentActivity.message}}</h3>
+    <h3> <i class="fa fa-cube"></i> **Title** <br>{{main.detailsVM.message}}</h3>
     <small><i class="fa fa-tim"></i> You have 14 projects. 10 not completed.</small>
 </div>
 <ul class="sidebar-list">
