--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -26,8 +26,12 @@
                 <a ui-sref="index.map"><i class="fa fa-map-marker"></i> <span class="nav-label">CARTE</span> </a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="index.aboutgizpader" href="/index/aboutgizpader"><i class="fa fa-globe"></i> <span
-                        class="nav-label">GIZ/PADER</span></a>
+                <a ui-sref="index.regactivity" href="/index/regactivity"><i class="fa fa-globe"></i> <span
+                        class="nav-label">Communes d'intervention</span></a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="index.valuechain" href="/index/valuechain"><i class="fa fa-star"></i> <span
+                        class="nav-label">Cha&icirc;ne de valeur</span></a>
             </li>
             <!-- <li ui-sref-active="active">
                 <a ui-sref="index.main"><i class="fa fa-laptop"></i> <span class="nav-label">Main page</span> </a>
