--- a/views/map.html
+++ b/views/map.html
@@ -19,6 +19,7 @@
             </ul>
 
             <pre>{{map.lastEvent | json}}</pre> -->
+            <pre ng-model=main.detailsVM>{{map.currentlocation | json }}</pre>
         </div>
     </div>
 </div>
