--- a/views/common/topnavbar.html
+++ b/views/common/topnavbar.html
@@ -4,7 +4,7 @@
             <span minimaliza-sidebar></span>
             <form role="search" class="navbar-form-custom" method="post" action="">
                 <div class="form-group">
-                    <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
+                    <input type="text" placeholder="rechercher ..." class="form-control" ng-model="main.detailsVM.message" name="top-search" id="top-search">
                 </div>
             </form>
         </div>
