add logo ; cleanup nav links

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -3,19 +3,19 @@
         <ul side-navigation class="nav metismenu" id="side-menu">
             <li class="nav-header">
 
-                <div class="profile-element" uib-dropdown>
-                    <a uib-dropdown-toggle href>
-                            <span class="clear">
+                <!--<div class="profile-element" uib-dropdown>
+                   <a uib-dropdown-toggle href>
+                         <span class="clear">
                                 <span class="block m-t-xs">
                                     <strong class="font-bold">{{main.userName}}</strong>
-                             </span>
-                                <span class="text-muted text-xs block">Example menu<b class="caret"></b></span>
-                            </span>
+                             </span> 
+                        <span class="text-muted text-xs block">Example menu<b class="caret"></b></span>
+                        </span>
                     </a>
                     <ul uib-dropdown-menu="" class="animated fadeInRight m-t-xs">
                         <li><a href="">Logout</a></li>
                     </ul>
-                </div>
+                </div>-->
                 <div class="logo-element">
                     PADER
                 </div>
@@ -43,7 +43,7 @@
                 <a ui-sref="index.aboutapp" href="/index/aboutapp"><i class="fa fa-info-circle"></i> <span class="nav-label">A
                         Propos</span></a>
             </li>
-            
+
             <li ui-sref-active="active">
                 <a ui-sref="index.legal"><i class="fa fa-file"></i> <span class="nav-label">Mentions Légales</span></a>
             </li>
