add Pader info page & update nav links

--- a/views/aboutgizpader.html
+++ b/views/aboutgizpader.html
@@ -3,9 +3,130 @@
         <div class="col-lg-12">
             <div class="text-center m-t-lg">
                 <h1>
-                    Simple example of second view
+                    Accroître la productivité tout en protégeant les ressources naturelles <br> grâce au développement rural au Cameroun
                 </h1>
-                <small>Configure in config.js as minor state.</small>
+                <small>Description succincte du projet</small>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+
+            <div class="widget lazur-bg p-xl">
+
+                <h2>
+                    GIZ/PADER
+                </h2>
+                <ul class="list-unstyled m-t-md">
+                    <li>
+                        <span class="fa fa-times-circle m-r-xs"></span>
+                        <label>D&eacute;signation:</label> Programme Développement rural au Cameroun
+                    </li>
+                    <li>
+                        <span class="fa fa-money m-r-xs"></span>
+                        <label>Commettant:</label> Ministère fédéral allemand de la Coopération économique et du Développement (BMZ)
+                    </li>
+                    <li>
+                        <span class="fa fa-globe m-r-xs"></span>
+                        <label>Pays:</label> Cameroun
+                    </li>
+                    <li>
+                        <span class="fa fa-globe m-r-xs"></span>
+                        <label>Organisme de tutelle:</label> Ministère de l’Agriculture et du Développement rural (MINADER)
+                    </li>
+                    <li>
+                        <span class="fa fa-globe m-r-xs"></span>
+                        <label>Durée totale:</label> de 2016 à 2020
+                    </li>
+                </ul>
+
+            </div>
+
+
+
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <!-- <h5>Animation without caption</h5> -->
+                    <div class="ibox-tools">
+                        <!-- <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a> -->
+                        <!-- <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li><a href="#">Config option 1</a>
+                            </li>
+                            <li><a href="#">Config option 2</a>
+                            </li>
+                        </ul> -->
+                        <!-- <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a> -->
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    <div class="carousel slide carouseltray" id="carousel1">
+                        <div class="carousel-inner">
+                            <div class="item">
+                                <img alt="image" class="img-responsive" src="img/About001_350x217.png" width="350" height="200">
+                            </div>
+                            <div class="item">
+                                <img alt="image" class="img-responsive" src="img/About002_350x196.jpg" width="350" height="200">
+                            </div>
+                            <div class="item active">
+                                <img alt="image" class="img-responsive" src="img/About003_350x234.jpg" width="350" height="200">
+                            </div>
+
+                        </div>
+                        <a data-slide="prev" href=".carouseltray" class="left carousel-control">
+                            <span class="icon-prev"></span>
+                        </a>
+                        <a data-slide="next" href=".carouseltray" class="right carousel-control">
+                            <span class="icon-next"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-lg-8">
+            <div class="text-muted m-t-lg">
+                <h2>Contexte</h2>
+                <p>Fort de sa situation géographique et de sa diversité écologique, le Cameroun offre des possibilités considérables en matière d’agriculture mixte. L’agriculture apporte une contribution essentielle au développement économique. Le secteur
+                    primaire représente plus de 20 % du produit intérieur brut (PIB) et 55 % des revenus à l’exportation, ce qui fait qu’il reste essentiel pour le développement économique. De plus, la production agricole offre un emploi à la majeure
+                    partie de la population active (env. 60 %). Par ailleurs, les structures sont caractérisées par des petites exploitations familiales.</p>
+                <p>[...]</p>
+                <p>Le développement rural constitue l’une des priorités de la politique camerounaise. Cependant le potentiel en matière de production et d’élevage n’a été exploité que dans une faible mesure jusqu’à présent. Les populations rurales ont souvent
+                    recours à des connaissances et expériences traditionnelles peu adaptées à l’évolution des conditions économiques et écologiques. La productivité de l’agriculture et de l’élevage dans les régions du Nord et de l’Adamaoua est très faible
+                    et ne contribue pas à la préservation des ressources naturelles.</p>
+
+                <h2>Objectifs</h2>
+                <p>Les secteurs de l’agriculture et de l’élevage dans les régions du Nord et de l’Adamaoua ont enregistré des gains de productivité grâce à des mesures économes en ressources naturelles.</p>
+
+                <h2>Approche</h2>
+                <p>
+                    Le programme fonctionne selon des approches différentes dans les régions du Nord et de l’Adamaoua :
+                </p>
+
+                <ol>
+                    <li>
+                        Amélioration de la coordination publique
+                    </li>
+                    <li>
+                        Formation initiale et continue dans les domaines de l’agriculture et de l’élevage
+                    </li>
+                    <li>
+                        Planification de l’utilisation des terres au niveau des communes
+                    </li>
+                    <li>
+                        Application de méthodes et de techniques adaptées dans les domaines de la production et de la transformation
+                    </li>
+                </ol>
+
+                <p>La société de conseil GFA Consulting Group soutient la mise en œuvre du projet.</p>
+
+                <em>en savoit plus en suivant le lien: <a href="https://www.giz.de/en/worldwide/66273.html" target="_blank" rel="noopener noreferrer">GIZ\PADER</a></em>
             </div>
         </div>
     </div>
