--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -40,6 +40,9 @@
                 <a ui-sref="index.minor"><i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span></a>
             </li> -->
             <li ui-sref-active="active">
+                <a ui-sref="index.aboutgizpader" href="/index/aboutgizpader"><i class="fa fa-file-archive-o"></i> <span class="nav-label">PADER</span></a>
+            </li>
+            <li ui-sref-active="active">
                 <a ui-sref="index.aboutapp" href="/index/aboutapp"><i class="fa fa-info-circle"></i> <span class="nav-label">A
                         Propos</span></a>
             </li>
